--- a/index.html
+++ b/index.html
@@ -83,5 +83,5 @@
     <h2>User Details</h2>
     <div id="user-entries"></div>
   </center>
-  <script type="text/javascript" src="form_js.js"></script>
+  <script type="text/javascript" src="main.js"></script>
 </body>
